feat: Add "create new" button to author dashboard

--- a/templates/authors/author_dashboard.html
+++ b/templates/authors/author_dashboard.html
@@ -48,6 +48,11 @@
       <div class="card">
         <div class="card-header">
           <h3 class="card-title">Authored Stories</h3>
+            <div class="card-tools">
+                <a href="/authors/new" class="btn btn-tool">
+                  <i class="fas fa-plus"></i>
+                </a>
+            </div>
         </div>
         <div class="card-body">
             <table class="table table-hover table-bordered">
