--- a/templates/categories/cat_admin.html
+++ b/templates/categories/cat_admin.html
@@ -215,8 +215,8 @@
 				<td><a href="/categories/${category['url_slug']}">/categories/${category['url_slug']}</a></td>
 				<td>
 					<div class="row">
-					<button type="button" onclick="delete_category(${category['id']})" class="btn btn-outline-danger col-md-4 offset-md-1"><i class="fa fa-trash"></i> Delete</button>
-					<button type="button" onclick="show_edit_form(${category['id']})" class="btn btn-outline-warning col-md-4 offset-md-2"><i class="fa fa-pencil-alt"></i> Edit</button>
+					<button type="button" onclick="delete_category(${category['id']})" class="btn btn-xs btn-outline-danger col-md-4 offset-md-1"><i class="fa fa-trash"></i> Delete</button>
+					<button type="button" onclick="show_edit_form(${category['id']})" class="btn btn-xs btn-outline-warning col-md-4 offset-md-2"><i class="fa fa-pencil-alt"></i> Edit</button>
 					</div>
 				</td>
 				</tr>
